# GeminiWatermarkTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
Formula/: unmark.rb
docs/: mac-install-en.md  mac-install-zh.md
report/: synthid_research.md
scripts/: ci_smoke_ai_denoise.sh  install.sh
src/: main.cpp  watermark_engine.cpp  watermark_engine.hpp
src/cli/: cli_app.cpp  cli_app.hpp
src/core/: ai_denoise.cpp  ai_denoise.hpp  ncnn_shim.hpp  types.hpp  watermark_detector.cpp  watermark_detector.hpp  watermark_engine.cpp  watermark_engine.hpp
src/gui/: gui_app.cpp  gui_app.hpp
src/gui/app/: app_controller.cpp  app_controller.hpp  app_state.hpp
src/gui/backend/: d3d11_backend.cpp  d3d11_backend.hpp  opengl_backend.cpp  opengl_backend.hpp  render_backend.cpp  render_backend.hpp  vulkan_backend.cpp  vulkan_backend.hpp
src/gui/resources/: style.hpp
src/gui/widgets/: image_preview.cpp  image_preview.hpp  main_window.cpp  main_window.hpp
src/utils/: path_formatter.hpp
